--- a/test/wordcloud.html
+++ b/test/wordcloud.html
@@ -7,10 +7,11 @@
     <title>Word Cloud</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
-    <script type="text/javascript;charset=utf-8" src='../lib/d3.cloud.layout.js' ></script>
+    <script src='../lib/d3.cloud.layout.js' type="text/javascript"></script>
 </head>
 
 <body>
+    <div id="cloud"></div>
     <script>
         // First define your cloud data, using `text` and `size` properties:
 
