--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://d3js.org/d3.v3.min.js" type="text/javascript"></script>
     <script>
-        d3v3 = d3
-        window.d3 = null
+        d3v3 = d3;
+        window.d3 = null;
     </script>
     <script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
     <script src='../lib/d3.cloud.layout.js' type="text/javascript"></script>
@@ -27,6 +27,7 @@
     <script src="./js/linechart.js" type="text/javascript"></script>
     <script src="./js/map.js" type="text/javascript"></script>
     <script src="./js/wordcloud.js" type="text/javascript"></script>
+    <script src="./js/heatmap.js" type="text/javascript"></script>
 </head>
 
 <body id='body'>
@@ -42,7 +43,7 @@
                         <select class="form-control" id="events">
                         </select>
                     </div>
-                    <a href="#" class="btn btn-info mt-2 ml-sm-2" role="button" id="switch">Line Chart</a>
+                    <!-- <a href="#" class="btn btn-info mt-2 ml-sm-2" role="button" id="switch">Line Chart</a> -->
                 </form>
             </div>
         </div>
@@ -73,6 +74,7 @@
         // linechart();
         mapchart();
         wordcloud();
+        heatmap();
         var bt = document.getElementById('switch');
         var title = document.getElementById('title');
         bt.addEventListener('click', function () {
