--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://d3js.org/d3.v3.min.js" type="text/javascript"></script>
-    <script>
-        d3v3 = d3;
-        window.d3 = null;
-    </script>
+    <script>d3v3 = d3;window.d3 = null;</script>
     <script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
     <script src='../lib/d3.cloud.layout.js' type="text/javascript"></script>
     <script src="https://d3js.org/d3-color.v1.min.js"></script>
@@ -43,19 +40,11 @@
                         <select class="form-control" id="events">
                         </select>
                     </div>
-                    <!-- <a href="#" class="btn btn-info mt-2 ml-sm-2" role="button" id="switch">Line Chart</a> -->
                 </form>
             </div>
         </div>
     </div>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div id="linechart"></div>
-            </div>
-        </div>
-    </div>
+    
     <script>
         var form = d3v3.select('#events');
         d3v3.json('./data/events.json', function (err, data) {
@@ -70,35 +59,9 @@
                     return d.name;
                 });
         });
-        var test = document.getElementById('events');
-        // linechart();
         mapchart();
         wordcloud();
         heatmap();
-        var bt = document.getElementById('switch');
-        var title = document.getElementById('title');
-        bt.addEventListener('click', function () {
-            if (bt.value == 1) {
-                bt.value = 2;
-                bt.text = 'Line Chart';
-                title.innerText = 'Impact des événements climatiques sur le prix des assurances aux US';
-                var line = document.getElementById('line')
-                document.getElementById('linechart').removeChild(line);
-                mapchart();
-                wordcloud();
-            } else {
-                bt.value = 1;
-                bt.text = 'Map';
-                title.innerText = "Evolution des événements climatiques au fil de l'année aux US";
-                var map = document.getElementById('mapchart')
-                var tooltip = document.getElementById('tooltip')
-                var wordcloudel = document.getElementById('wordcloudsvg')
-                document.getElementById('body').removeChild(map)
-                document.getElementById('body').removeChild(tooltip)
-                document.getElementById('body').removeChild(wordcloudel)
-                linechart();
-            }
-        });
     </script>
 </body>
 
