--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://d3js.org/d3.v3.min.js" type="text/javascript"></script>
-    <script>d3v3 = d3;window.d3 = null;</script>
+    <script>d3v3 = d3; window.d3 = null;</script>
     <script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
     <script src='../lib/d3.cloud.layout.js' type="text/javascript"></script>
     <script src="https://d3js.org/d3-color.v1.min.js"></script>
@@ -44,7 +44,25 @@
             </div>
         </div>
     </div>
-    
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12" id="map"></div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12" id="wordcloud"></div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12" id="heatmap"></div>
+        </div>
+    </div>
+
     <script>
         var form = d3v3.select('#events');
         d3v3.json('./data/events.json', function (err, data) {
