--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12" id="map"></div>
+            <div class="col-md-7" id="map"></div>
+            <div class="col-md-5" id="wordcloud"></div>
         </div>
     </div>
 
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <div class="row">
             <div class="col-md-12" id="wordcloud"></div>
         </div>
-    </div>
+    </div> -->
 
     <div class="container-fluid">
         <div class="row">
