--- a/index.html
+++ b/index.html
@@ -28,12 +28,21 @@
 </head>
 
 <body id='body'>
+
+    <div class="jumbotron jumbotron bg-cover">
+        <div class="overlay"></div>
+        <div class="container">
+            <h1 class="display-3 mb-1">Climate events in the US in 2017</h1>
+            <p class="lead"><span>By Group 42</span></p>
+        </div>
+    </div>
+
     <div class="container-fluid" id='main'>
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-12">
                 <h1 id='title'>Impact des événements climatiques sur le prix des assurances aux US</h1>
             </div>
-            <div class="col-md-5">
+            <!-- <div class="col-md-5">
                 <form class="form-inline">
                     <div class="form-group mx-sm-3 mt-2">
                         <label class="mr-sm-2" for="events">Evènement :</label>
@@ -41,13 +50,24 @@
                         </select>
                     </div>
                 </form>
-            </div>
+            </div> -->
         </div>
     </div>
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-7" id="map"></div>
+            <div class="col-md-7">
+                <div class="row-md-5">
+                    <form class="form-inline justify-content-center">
+                        <div class="form-group mx-sm mt">
+                            <label class="mr-sm-2" for="events">Event :</label>
+                            <select class="form-control" id="events">
+                            </select>
+                        </div>
+                    </form>
+                </div>
+                <div class="row-md-7" id="map"></div>
+            </div>
             <div class="col-md-5" id="wordcloud"></div>
         </div>
     </div>
