--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
     <div class="jumbotron jumbotron bg-cover">
         <div class="overlay"></div>
         <div class="container">
-            <h1 class="display-3 mb-1">Climate events in the US in 2017</h1>
+            <h1 class="display-3 mb-1">Climate events in the United States in 2017</h1>
             <p class="lead"><span>By Group 42</span></p>
         </div>
     </div>
 
     <div class="container-fluid" id='main'>
         <div class="row">
-            <div class="col-md-12">
-                <h1 id='title'>Impact des événements climatiques sur le prix des assurances aux US</h1>
+            <div class="col-md-12 mb-5">
+                <h1 class='text-center' id='title'>Impact of climate events on the price of home insurance in the
+                    United States</h1>
             </div>
             <!-- <div class="col-md-5">
                 <form class="form-inline">
@@ -68,7 +69,12 @@
                 </div>
                 <div class="row-md-7" id="map"></div>
             </div>
-            <div class="col-md-5" id="wordcloud"></div>
+            <div class="col-md-5">
+                <div class="row-md-5">
+                    <h3 class="text-center">Home insurance prices</h3>
+                </div>
+                <div class="row-md-7" id="wordcloud"></div>
+            </div>
         </div>
     </div>
 
@@ -82,6 +88,15 @@
         <div class="row">
             <div class="col-md-12" id="heatmap"></div>
         </div>
+    </div>
+    <div class="container-fluid">
+        <div class="d-flex justify-content-center">
+            <div class="col-md-4" id="legend1"></div>
+        </div>
+    </div>
+
+    <div class="row" id="footer">
+        <div class="col-lg-12">Baud Florian - All rights reserved</div>
     </div>
 
     <script>
