--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </div>
 
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12 mb-5">
+        <div class="d-flex justify-content-center">
+            <div class="col-md-10 mb-5">
                 <p class="text-justify">In the USA, recent studies show that average home insurance rates have risen in
                     the last decade. In most common home insurance policy, insurance company will repair or replace
                     home and stuff if they’re stolen, damaged, or destroyed by Lightning, fire, hail, hurricane or any
@@ -80,17 +80,17 @@
                 </div>
             </div>
             <div class="col-md-5">
-                <div class="row-md-5">
+                <div class="row-md-1">
                     <h3 class="text-center">Home insurance prices</h3>
                 </div>
-                <div class="row-md-7" id="wordcloud"></div>
+                <div class="row-md-11" id="wordcloud"></div>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
+    <div class="container-fluid mb-5">
+        <div class="d-flex justify-content-center">
+            <div class="col-md-10">
                 <p class="text-justify">We can easily see the correlation between natural disasters and home insurance
                     prices. We have one exception, California. California is the second-most natural disaster prone
                     state in America just after Oklahoma. But home insurance companies doesn’t cover the majority of
@@ -102,7 +102,7 @@
         </div>
     </div>
 
-    <div class="container-fluid mb-5">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
                 <h3 class='text-center'>Number of occurences of each type of events throughout the year 2017</h3>
@@ -111,8 +111,8 @@
     </div>
 
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
+        <div class="d-flex justify-content-center">
+            <div class="col-md-10">
                 <p class="text-justify">2017 was the most expensive year for disasters in America. That’s why we chose
                     to represent the number of occurrence for each climate event with a heat map. We can easily
                     determine which events are the most frequent : thunderstorm wind and hail. Moreover, we observe the
